# jaxsnn

./: .gitignore  .gitreview  .pre-commit-config.yaml  CITATION.cff  INSTALL_OLDSKOOL.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  wscript
.ci/: Jenkinsfile  Jenkinsfile_industryStandard
doc/: conf.py  index.rst  installation.rst  jaxsnn.rst  requirements.txt
doc/dev/: commit_convention.md  documentation.md
doc/notebooks/: adex_neuron_model.ipynb  adex_neuron_model.md  event_based_integration.ipynb  event_based_integration.md  exponential_integration.md  harmonic_oscillator.md  hodgekin_huxley.ipynb  hodgekin_huxley.md  passive_cable.ipynb  passive_cable.md  point_neuron_models.ipynb  point_neuron_models.md  synapse_dynamics.ipynb  synapse_dynamics.md  synaptic_transmission_models.ipynb
docs/notebooks/: event_prop.ipynb  ttfs.ipynb
jaxsnn/: __init__.py  adex.py  hodgekin_huxley.py  lif.py  linear_solver.py  linear_solver_test.py  neuron.py  tree_solver.py  tree_solver_test.py  types.py
jaxsnn/base/: __init__.py  explicit.py  explicit_test.py  funcutils.py  funcutils_test.py  implicit.py  implicit_test.py  root_solving.py  root_solving_test.py  tree_solver.py  tree_solver_test.py  types.py
jaxsnn/benches/: linear.py  linear_classifier.py
jaxsnn/channels/: ca_lva.py  common.py  synapse.py  traub.py
notebooks/: event_prop.ipynb  exponential_integration.ipynb  harmonic_oscillator.ipynb  hodgekin_huxley.ipynb  passive_cable.ipynb  synapse_dynamics.ipynb  ttfs.ipynb
tests/: input_test.py  next_test.py  utils_test.py
(+317 files in other folders)
