[build-system]
requires = ["setuptools"]

[project]
name = "jaxsnn"
version = "0.1.0"
authors = [
  { name="Electronic Vision(s)", email="visions-dev@kip.uni-heidelberg.de" },
]
description = "jaxsnn is an event-based approach to machine-learning-inspired training and simulation of SNNs, including support for neuromorphic backends (BrainScaleS-2)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "jax==0.4.13; python_version=='3.8'",
  "jaxlib==0.4.13; python_version=='3.8'",
  "jax>=0.4.13; python_version>'3.8'",
  "jaxlib>=0.4.13; python_version>'3.8'",
  "optax>=0.1.4",
  "tree-math>0.1.0",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/electronicvisions/jaxsnn"
"Bug Tracker" = "https://github.com/electronicvisions/jaxsnn/issues"

[tool.setuptools.packages.find]
where = ["src/pyjaxsnn"]
include = ["jaxsnn*"]

